--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,7 @@
   },
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
-    "import/no-unresolved": 0,
+    "react/jsx-props-no-spreading": "off",
     "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": [
       1,
