--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "framer-motion": "^7.6.2",
+    "nanoid": "^4.0.0",
     "next": "13.0.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.31.1"
   },
   "devDependencies": {
     "@types/node": "18.11.5",
