--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^7.6.2",
     "nanoid": "^4.0.0",
     "next": "13.0.0",
+    "next-seo": "^5.14.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
